# OpenGLRenderCube

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Shader.h
shaders/fragment/: fragment.glsl
shaders/vertex/: vertex.glsl
src/: Camera.cpp  Shader.cpp  glad.c  main.cpp
